test/kubernetes/e2e/features/tracing/testdata/tracing-policy.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: HTTPListenerPolicy
metadata:
  name: tracing-policy
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gw
  tracing:
    provider:
      openTelemetry:
        serviceName: "my:service"
        resourceDetectors:
        - environmentResourceDetector: {}
        grpcService:
          authority: "example.com"
          backendRef:
            name: otel-collector
            namespace: default
            port: 4317
    spawnUpstreamSpan: true
    customTags:
      - tag: custom
        literal:
          value: literal
      - tag: request
        requestHeader:
          name: x-header-tag
